# ma_test_case

./: Makefile  README.md  pyproject.toml  Сладости_ чипсы_ снеки_Moscow.csv  Сладости_ чипсы_ снеки_SPb.csv
ma_test_case/: parser.py
